--- a/iiot/WiFiOTG/plan.html
+++ b/iiot/WiFiOTG/plan.html
@@ -10,222 +10,319 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<!-- Pushy -->
+		<link rel="stylesheet" href="mobilemenu/pushy.css">
+		<script type="text/javascript">
+			// 點了top展開與箭頭轉向
+			$(function () {
+				$(".order_history .card .top_cont").click(function () {
+					$(this).next(".order_info").stop(true, true).fadeToggle(0);
+					$(this).toggleClass("arr_up");
+					return false;
+				});
+			});
+			$(function () {
+				$(".header_wrap .cont_user .profile").click(function () {
+					$(this).parent().find(".sub_list").stop(true, true).fadeToggle(0);
+					return false;
+				});
+			});
+		</script>
 	</head>
 	<body>
-		<header class="header_wrap">
-			<section class="cont_middle clearfix">
-				<a class="header_logo" href="index.html">WiFiOTG</a>
-				<nav class="menu">
-					<ul>
-						<li>
-							<p><a href="index.html">首頁</a></p>
-						</li>
-						<li>
-							<p><a href="location.html">取還點查詢</a></p>
-						</li>
-						<li>
-							<p><a href="teaching.html">使用說明</a></p>
-						</li>
-						<li>
-							<p><a href="qa.html">常見問題</a></p>
-						</li>
-						<li>
-							<p class="btn_yello"><a href="history.html">租借紀錄查詢</a></p>
-						</li>
-					</ul>
-				</nav>
-			</section>
-		</header>
-		<main class="main_wrap">
-			<section class="inside_banner" style="background-image: url(images/pexels-satoshi-hirayama-2070033.jpg);">
-				<div class="bk">
-					<h3 class="bn_title">日本</h3>
-				</div>
-			</section>
-			<section class="plan_content">
-				<div class="wifi_router_info clearfix">
-					<div class="breadcrumb">
-						<p><a class="home" href="index.html">首頁</a> / <a href="#">日本</a> / <span>產品方案titletielt</span></p>
-					</div>
-					<div class="img_wifi_router">
-						<img src="images/A1-Japan.jpg" alt="">
-					</div>
-					<div class="other_item">
-						<ul class="hashtag">
-							<li>
-								<p><a class="bg_c_01" href="#">中秋特惠</a></p>
-							</li>
-							<li>
-								<p><a class="bg_c_02" href="#">日本</a></p>
-							</li>
-						</ul>
-						<h3 class="top_title">產品 Ti產產品 Titl產品 Title品 Titletle</h3>
-						<h4 class="plan_subtitle">流量儲值型NT$140/GB</h4>
-						<p class="plan_textinfo">獨家APP開通，即時管理隨時加值自由省<br>
-						台灣開通國外使用，剩餘流量回台繼續用<br>
-						支援手機型號：iPhone XR以上版本<br>
-						必備APP：jetfi WIFI_eSIM APP (<a href="#" target="_blank">APP STORE下載連結</a>)<br>
-						連線速度：4G上網<br>
-						效期說明：訂購完成後30日內完成APP開通，開通後30日內流量有效。<br>
-						操作設定：請詳閱<a href="#" target="_blank">線上說明書(連結待補)</a>，或加入 LINE@ 線上客服搜尋 <span class="f_c_green">@kin8201u</span><br>
-						<span class="f_c_red">注意：本產品購買後30日內未開通或已經APP開通，即無法退費。</span>
-						</p>
-					</div>
-				</div>
-			</section>
-			<section class="plan_content bg_c1">
-				<h3 class="top_title">請選擇方案</h3>
-			   	<ul class="plan_list clearfix">
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本1G套餐</h4>
-								<p class="plan_price">
-									<span>優惠價</span>
-									<span>$</span>140
-									<!-- <span class="original-price">原價 799 元</span> -->
-								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>初體驗及輕度用量加值好選擇<br>
-								加值嗎?還沒有嘗試過eSIM的方便嗎?
-								快來體驗</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="login.html">開始預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本3G套餐</h4>
-								<p class="plan_price">
-									<span>優惠價</span>
-									<span>$</span>399
-									<span class="original-price">原價 420 元</span>
-								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>中度用量優質選<br>
-								95折回饋好朋友</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="login.html">開始預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本5G套餐</h4>
-					   			<p class="plan_price">
-									<span>優惠價</span>
-									<span>$</span>630
-									<span class="original-price">原價 700 元</span>
-								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>重度用量優質選<br>
-								9折回饋好朋友</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="login.html">開始預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-					<!-- <li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本吃到飽</h4>
-					   			<p class="plan_price">
-									<span>$</span>2599
-									<span class="original-price">原價 1499 元</span>
-								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
-					   			雙向多國語言即時翻譯、語言不通免驚!</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">立即預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本吃到飽</h4>
-								<p class="plan_price">
-									<span>$</span>199
-									<span class="original-price">原價 599 元</span>
-								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>每天500MB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">立即預訂</a>
-					   		</p>
-					   	</div>
-			   		</li>
-			   		<li>
-			   			<div class="plan_info">
-				   			<div class="plan_info_top">
-				   				<h4 class="plan_title">日本吃到飽</h4>
-								<p class="plan_price">
-									<span>$</span>199
-									<span class="original-price">原價 699 元</span>
-								</p>
-					   		</div>
-					   		<div class="other_info">
-					   			<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
-					   			雙向多國語言即時翻譯、語言不通免驚!</p>
-					   		</div>
-				   			<p class="plan_order">
-				   				<a href="order.html">立即預訂</a>
-					   		</p>
-					   	</div>
-			   		</li> -->
-			   	</ul> 
-			</section>
-			<section class="wifiotg_info">
-				<div class="cont_middle">
-					<div class="bn-info">
-						<img src="images/bottom-info.png" width="100%" alt="">
-					</div>
-				</div>
-			</section>
-		</main>
-		<footer class="footer_wrap">
-			<section class="cont_middle">
-				<div class="copyright">
-					<a class="logo">
-						<a href="index.html"></a>
-					</a>
-					<p>WiFi on the Go , Wherever You Go</p>
-					<p class="text-copyright">Copyright © 2023 All Rights Reserved.</p>
-				</div>
-				<ul class="service">
-					<li>
-						<p>客服信箱　<a href="mailto:">service@xxxxx.com</a></p>
+		<!-- Pushy Menu -->
+		<nav class="pushy pushy-left" data-focus="#first-link">
+			<div class="pushy-content">
+				<!-- 有登入才顯示這行 hi_user  -->
+				<p class="hi_user">Hi, wendyshiue00123</p>
+				<ul>
+					<li class="pushy-link">
+						<a href="index.html">首頁</a>
 					</li>
-					<li>
-						<p>服務電話　<a href="tel:+886-2-1234-5678">02-1234-5678</a></p>
+					<li class="pushy-link">
+						<a class="c_yello" href="history.html">租借紀錄查詢</a>
 					</li>
-					<li>
-						<p><span>（ 服務時間：週一至週日 9：00 ~ 18：00）</span></p>
+					<li class="pushy-link">
+						<a href="location.html">取還點查詢</a>
+					</li>
+					<li class="pushy-link">
+						<a href="teaching.html">使用說明</a>
+					</li>
+					<li class="pushy-link">
+						<a href="qa.html">常見問題</a>
+					</li>
+					<li class="other-link">
+						<a href="terms.html">服務條款</a>
+						<a href="privacy.html">隱私權政策</a>
 					</li>
 				</ul>
-				<div class="link">
-					<p>
-						<a href="#" target="_block">使用條款</a>
-						<a href="#" target="_block">免責聲明</a>
-						<a href="#" target="_block">常見問題</a>
-					</p>
-				</div>
-			</section>
-		</footer>
+				<p class="text">Copyright © 2023 All Rights Reserved.</p>
+			</div>
+	
+		</nav>
+		<!-- Site Overlay -->
+		<div class="site-overlay"></div>
+		<div id="container">
+			<header class="header_wrap">
+				<button class="menu-btn">
+					<span></span>
+				</button>
+				<section class="cont_middle clearfix">
+					<a class="header_logo" href="index.html">WiFiOTG</a>
+					<nav class="menu">
+						<ul>
+							<li>
+								<p><a href="index.html">首頁</a></p>
+							</li>
+							<li>
+								<p><a href="location.html">取還點查詢</a></p>
+							</li>
+							<li>
+								<p><a href="teaching.html">使用說明</a></p>
+							</li>
+						</ul>
+					</nav>
+					<div class="cont_user">
+						<div class="profile">
+							<div class="photo"
+								style="background-image:url(https://lh3.googleusercontent.com/ogw/AGvuzYb52a2kJ6PRLTAuYe3-t0Hg2Dq7pfqEQ6iZ2oBu=s32-c-mo);">
+							</div>
+							<p class="user_name">wendyshiue00123</p>
+							<div class="sub_list">
+								<ul>
+									<li>
+										<p><a>帳號登出</a></p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
+			</header>
+			<main class="main_wrap">
+				<section class="inside_banner" style="background-image: url(images/pexels-satoshi-hirayama-2070033.jpg);">
+					<div class="bk">
+						<h3 class="bn_title">日本</h3>
+					</div>
+				</section>
+				<section class="plan_content">
+					<div class="wifi_router_info clearfix">
+						<div class="breadcrumb">
+							<p><a class="home" href="index.html">首頁</a> / <a href="#">日本</a> / <span>產品方案titletielt</span></p>
+						</div>
+						<div class="img_wifi_router">
+							<img src="images/A1-Japan.jpg" alt="">
+						</div>
+						<div class="other_item">
+							<ul class="hashtag">
+								<li>
+									<p><a class="bg_c_01" href="#">中秋特惠</a></p>
+								</li>
+								<li>
+									<p><a class="bg_c_02" href="#">日本</a></p>
+								</li>
+							</ul>
+							<h3 class="top_title">產品 Ti產產品 Titl產品 Title品 Titletle</h3>
+							<h4 class="plan_subtitle">流量儲值型NT$140/GB</h4>
+							<p class="plan_textinfo">獨家APP開通，即時管理隨時加值自由省<br>
+							台灣開通國外使用，剩餘流量回台繼續用<br>
+							支援手機型號：iPhone XR以上版本<br>
+							必備APP：jetfi WIFI_eSIM APP (<a href="#" target="_blank">APP STORE下載連結</a>)<br>
+							連線速度：4G上網<br>
+							效期說明：訂購完成後30日內完成APP開通，開通後30日內流量有效。<br>
+							操作設定：請詳閱<a href="#" target="_blank">線上說明書(連結待補)</a>，或加入 LINE@ 線上客服搜尋 <span class="f_c_green">@kin8201u</span><br>
+							<span class="f_c_red">注意：本產品購買後30日內未開通或已經APP開通，即無法退費。</span>
+							</p>
+						</div>
+					</div>
+				</section>
+				<section class="plan_content bg_c1">
+					<h3 class="top_title">請選擇方案</h3>
+					<ul class="plan_list clearfix">
+						<li>
+							<div class="plan_info">
+								<div class="plan_info_top">
+									<h4 class="plan_title">日本1G套餐</h4>
+									<p class="plan_price">
+										<span>優惠價</span>
+										<span>$</span>140
+										<!-- <span class="original-price">原價 799 元</span> -->
+									</p>
+								</div>
+								<div class="other_info">
+									<p>初體驗及輕度用量加值好選擇<br>
+									加值嗎?還沒有嘗試過eSIM的方便嗎?
+									快來體驗</p>
+								</div>
+								<p class="plan_order">
+									<a href="login.html">開始預訂</a>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="plan_info">
+								<div class="plan_info_top">
+									<h4 class="plan_title">日本3G套餐</h4>
+									<p class="plan_price">
+										<span>優惠價</span>
+										<span>$</span>399
+										<span class="original-price">原價 420 元</span>
+									</p>
+								</div>
+								<div class="other_info">
+									<p>中度用量優質選<br>
+									95折回饋好朋友</p>
+								</div>
+								<p class="plan_order">
+									<a href="login.html">開始預訂</a>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="plan_info">
+								<div class="plan_info_top">
+									<h4 class="plan_title">日本5G套餐</h4>
+									<p class="plan_price">
+										<span>優惠價</span>
+										<span>$</span>630
+										<span class="original-price">原價 700 元</span>
+									</p>
+								</div>
+								<div class="other_info">
+									<p>重度用量優質選<br>
+									9折回饋好朋友</p>
+								</div>
+								<p class="plan_order">
+									<a href="login.html">開始預訂</a>
+								</p>
+							</div>
+						</li>
+						<!-- <li>
+							<div class="plan_info">
+								<div class="plan_info_top">
+									<h4 class="plan_title">日本吃到飽</h4>
+									<p class="plan_price">
+										<span>$</span>2599
+										<span class="original-price">原價 1499 元</span>
+									</p>
+								</div>
+								<div class="other_info">
+									<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
+									雙向多國語言即時翻譯、語言不通免驚!</p>
+								</div>
+								<p class="plan_order">
+									<a href="order.html">立即預訂</a>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="plan_info">
+								<div class="plan_info_top">
+									<h4 class="plan_title">日本吃到飽</h4>
+									<p class="plan_price">
+										<span>$</span>199
+										<span class="original-price">原價 599 元</span>
+									</p>
+								</div>
+								<div class="other_info">
+									<p>每天500MB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新</p>
+								</div>
+								<p class="plan_order">
+									<a href="order.html">立即預訂</a>
+								</p>
+							</div>
+						</li>
+						<li>
+							<div class="plan_info">
+								<div class="plan_info_top">
+									<h4 class="plan_title">日本吃到飽</h4>
+									<p class="plan_price">
+										<span>$</span>199
+										<span class="original-price">原價 699 元</span>
+									</p>
+								</div>
+								<div class="other_info">
+									<p>每天1GB 4G訊號，超過即降速至256k吃到飽，台北時間00:00更新<br>
+									雙向多國語言即時翻譯、語言不通免驚!</p>
+								</div>
+								<p class="plan_order">
+									<a href="order.html">立即預訂</a>
+								</p>
+							</div>
+						</li> -->
+					</ul> 
+				</section>
+				<section class="wifiotg_info">
+					<div class="cont_middle">
+						<div class="bn-info">
+							<img src="images/bottom-info.png" width="100%" alt="">
+						</div>
+					</div>
+				</section>
+			</main>
+			<footer class="footer_wrap">
+				<section class="cont_middle">
+					<div class="copyright">
+						<a class="logo">
+							<a href="index.html"></a>
+						</a>
+						<p>WiFi on the Go , Wherever You Go</p>
+						<p class="text-copyright">Copyright © 2023 All Rights Reserved.</p>
+					</div>
+					<ul class="service">
+						<li>
+							<p>客服信箱　<a href="mailto:">service@xxxxx.com</a></p>
+						</li>
+						<li>
+							<p>服務電話　<a href="tel:+886-2-1234-5678">02-1234-5678</a></p>
+						</li>
+						<li>
+							<p><span>（ 服務時間：週一至週日 9：00 ~ 18：00）</span></p>
+						</li>
+					</ul>
+					<div class="link">
+						<p>
+							<a href="#" target="_block">使用條款</a>
+							<a href="#" target="_block">免責聲明</a>
+							<a href="#" target="_block">常見問題</a>
+						</p>
+					</div>
+				</section>
+			</footer>
+		</div>
+		<!-- pushy JS -->
+		<script src="mobilemenu/pushy.js"></script>
+		<script>
+			// 按下同意後，呼叫setAllowPrivacy
+			function setAllowPrivacy() {
+				localStorage.setItem('isPrivacyAllowed', true);
+			}
+			// 載入頁面時，呼叫getAllowPrivacy，確認是否需要呈現隱私權
+			function getAllowPrivacy() {
+				var isPrivacyAllowed = localStorage.getItem('isPrivacyAllowed');
+				if (isPrivacyAllowed === 'true') {
+					// 不顯示隱私權
+					console.log('hide');
+					$('#cookie-accept').hide();
+				} else {
+					// 顯示隱私權
+					console.log('show');
+					$('#cookie-accept').show();
+				}
+			}
+			// 建立cookie
+			function createCookie(name, value, days, path) {
+				if (days) {
+					var date = new Date();
+					date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+					var expires = "; expires=" + date.toGMTString();
+				}
+				else var expires = "";
+				document.cookie = name + "=" + value + expires + "; path=/";
+			}
+
+			getAllowPrivacy();
+		</script>
 	</body>
 </html>
 
