--- a/iiot/WiFiOTG/history.html
+++ b/iiot/WiFiOTG/history.html
@@ -10,6 +10,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<!-- Pushy -->
+		<link rel="stylesheet" href="mobilemenu/pushy.css">
 		<script type="text/javascript">
 			// 點了top展開與箭頭轉向
 			$(function(){
@@ -19,301 +21,380 @@
 					return false;
 				});
 			});
+			$(function(){
+				$(".header_wrap .cont_user .profile").click(function(){
+					$(this).parent().find(".sub_list").stop(true, true).fadeToggle(0);
+					return false;
+				});
+			});
 		</script>
 	</head>
 	<body>
-		<header class="header_wrap">
-			<!-- 帳號登入 + logged_in -->
-			<section class="cont_middle logged_in clearfix">
-				<a class="header_logo" href="index.html">WiFiOTG</a>
-				<nav class="menu">
-					<ul>
-						<li>
-							<p><a href="index.html">首頁</a></p>
-						</li>
-						<li>
-							<p><a href="location.html">取還點查詢</a></p>
-						</li>
-						<li>
-							<p><a href="teaching.html">使用說明</a></p>
-						</li>
-						<li>
-							<p><a href="qa.html">常見問題</a></p>
-						</li>
-					</ul>
-				</nav>
-				<div class="cont_user">
-					<div class="profile">
-						<div class="photo"
-							style="background-image:url(https://lh3.googleusercontent.com/ogw/AGvuzYb52a2kJ6PRLTAuYe3-t0Hg2Dq7pfqEQ6iZ2oBu=s32-c-mo);">
-						</div>
-						<p>wendyshiue00123（<a href="index.html">登出</a>）</p>
-					</div>
-				</div>
-			</section>
-		</header>
-		<main class="main_wrap">
-			<section class="shopping_contents">
-				<div class="order_fillin">
-					<h3 class="top_title">租借紀錄</h3>
-					<div class="order_history">
-						<!-- 租借中（展開） -->
-						<div class="card">
-							<div class="top_cont arr_up">
-								<!-- 租借中 state_online -->
-								<!-- 待取機 state_notyea -->
-								<!-- 已完成 state_done -->
-								<p class="state state_online">租借中</p>
-								<div class="order_nb_info">
-									<p class="order_date">訂單日期：2023-06-30</p>
-									<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
-								</div>
-								<div class="arr"></div>
-							</div>
-							<div class="order_info">
-								<div class="row">
-									<ul>
-										<li>
-											<p class="s_title">方案</p>
-											<p class="text">流量儲值型NT$140/GB</p>
-										</li>
-										<li>
-											<p class="s_title">起迄日期</p>
-											<p class="text">2023-06-20 ~ 2023-06-27</p>
-										</li>
-										<li>
-											<p class="s_title">設備數</p>
-											<p class="text">1</p>
-										</li>
-										<li>
-											<p class="s_title">價格</p>
-											<p class="text">1,000</p>
-										</li>
-									</ul>
-								</div>
-								<div class="row">
-									<ul>
-										<li>
-											<p class="s_title">訂購人名稱</p>
-											<p class="text">Eikiy Chang</p>
-										</li>
-										<li>
-											<p class="s_title">訂購人信箱</p>
-											<p class="text">
-												<a href="#">eikiychang@gmail.com</a>
-											</p>
-										</li>
-										<li>
-											<p class="s_title">訂購人電話</p>
-											<p class="text">0988000123</p>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="device_info">
-								<p class="device_nb">裝置編號： <span>XXXXQEE</span></p>
-								<p class="btn"><a href="#">充值</a></p>
-							</div>
-						</div>
-						<!-- 租借中（收起） -->
-						<div class="card order_info">
-							<div class="top_cont">
-								<!-- 租借中 state_online -->
-								<!-- 待取機 state_notyea -->
-								<!-- 已完成 state_done -->
-								<p class="state state_online">租借中</p>
-								<div class="order_nb_info">
-									<p class="order_date">訂單日期：2023-06-30</p>
-									<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
-								</div>
-								<div class="arr"></div>
-							</div>
-							<div class="order_info" style="display: none;">
-								<div class="row">
-									<ul>
-										<li>
-											<p class="s_title">方案</p>
-											<p class="text">流量儲值型NT$140/GB</p>
-										</li>
-										<li>
-											<p class="s_title">起迄日期</p>
-											<p class="text">2023-06-20 ~ 2023-06-27</p>
-										</li>
-										<li>
-											<p class="s_title">設備數</p>
-											<p class="text">1</p>
-										</li>
-										<li>
-											<p class="s_title">價格</p>
-											<p class="text">1,000</p>
-										</li>
-									</ul>
-								</div>
-								<div class="row">
-									<ul>
-										<li>
-											<p class="s_title">訂購人名稱</p>
-											<p class="text">Eikiy Chang</p>
-										</li>
-										<li>
-											<p class="s_title">訂購人信箱</p>
-											<p class="text">
-												<a href="#">eikiychang@gmail.com</a>
-											</p>
-										</li>
-										<li>
-											<p class="s_title">訂購人電話</p>
-											<p class="text">0988000123</p>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="device_info">
-								<p class="device_nb">裝置編號： <span>XXXXQEE</span></p>
-								<p class="btn"><a href="#">充值</a></p>
-							</div>
-						</div>
-						<!-- 待取機 -->
-						<div class="card">
-							<div class="top_cont">
-								<!-- 租借中 state_online -->
-								<!-- 待取機 state_not_yet -->
-								<!-- 已完成 state_done -->
-								<p class="state state_not_yet">待取機</p>
-								<div class="order_nb_info">
-									<p class="order_date">訂單日期：2023-07-05</p>
-									<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
-								</div>
-								<div class="arr"></div>
-							</div>
-							<div class="order_info" style="display: none;">
-								<div class="row">
-									<ul>
-										<li>
-											<p class="s_title">方案</p>
-											<p class="text">流量儲值型NT$140/GB</p>
-										</li>
-										<li>
-											<p class="s_title">起迄日期</p>
-											<p class="text">2023-06-20 ~ 2023-07-05</p>
-										</li>
-										<li>
-											<p class="s_title">設備數</p>
-											<p class="text">1</p>
-										</li>
-										<li>
-											<p class="s_title">價格</p>
-											<p class="text">4,000</p>
-										</li>
-									</ul>
-								</div>
-								<div class="row">
-									<ul>
-										<li>
-											<p class="s_title">訂購人名稱</p>
-											<p class="text">Wendy Shiue</p>
-										</li>
-										<li>
-											<p class="s_title">訂購人信箱</p>
-											<p class="text">
-												<a href="#">wendyshiue00123@gmail.com</a>
-											</p>
-										</li>
-										<li>
-											<p class="s_title">訂購人電話</p>
-											<p class="text">0909123456</p>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<!-- 已完成（收起）- 標題底為灰色 -->
-						<div class="card bg_end">
-							<div class="top_cont">
-								<!-- 租借中 state_online -->
-								<!-- 待取機 state_not_yet -->
-								<!-- 已完成 state_done -->
-								<p class="state state_done">已完成</p>
-								<div class="order_nb_info">
-									<p class="order_date">訂單日期：2023-07-05</p>
-									<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
-								</div>
-								<div class="arr"></div>
-							</div>
-							<div class="order_info" style="display: none;">
-								<div class="row">
-									<ul>
-										<li>
-											<p class="s_title">方案</p>
-											<p class="text">流量儲值型NT$140/GB</p>
-										</li>
-										<li>
-											<p class="s_title">起迄日期</p>
-											<p class="text">2023-06-20 ~ 2023-07-05</p>
-										</li>
-										<li>
-											<p class="s_title">設備數</p>
-											<p class="text">1</p>
-										</li>
-										<li>
-											<p class="s_title">價格</p>
-											<p class="text">4,000</p>
-										</li>
-									</ul>
-								</div>
-								<div class="row">
-									<ul>
-										<li>
-											<p class="s_title">訂購人名稱</p>
-											<p class="text">Wendy Shiue</p>
-										</li>
-										<li>
-											<p class="s_title">訂購人信箱</p>
-											<p class="text">
-												<a href="#">wendyshiue00123@gmail.com</a>
-											</p>
-										</li>
-										<li>
-											<p class="s_title">訂購人電話</p>
-											<p class="text">0909123456</p>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-		</main>
-		<footer class="footer_wrap">
-			<section class="cont_middle">
-				<div class="copyright">
-					<a class="logo">
-						<a href="index.html"></a>
-					</a>
-					<p>WiFi on the Go , Wherever You Go</p>
-					<p class="text-copyright">Copyright © 2023 All Rights Reserved.</p>
-				</div>
-				<ul class="service">
-					<li>
-						<p>客服信箱　<a href="mailto:">service@xxxxx.com</a></p>
+		<!-- Pushy Menu -->
+		<nav class="pushy pushy-left" data-focus="#first-link">
+			<div class="pushy-content">
+				<!-- 有登入才顯示這行 hi_user  -->
+				<p class="hi_user">Hi, wendyshiue00123</p>
+				<ul>
+					<li class="pushy-link">
+						<a href="index.html">首頁</a>
 					</li>
-					<li>
-						<p>服務電話　<a href="tel:+886-2-1234-5678">02-1234-5678</a></p>
+					<li class="pushy-link">
+						<a class="c_yello" href="history.html">租借紀錄查詢</a>
 					</li>
-					<li>
-						<p><span>（ 服務時間：週一至週日 9：00 ~ 18：00）</span></p>
+					<li class="pushy-link">
+						<a href="location.html">取還點查詢</a>
+					</li>
+					<li class="pushy-link">
+						<a href="teaching.html">使用說明</a>
+					</li>
+					<li class="pushy-link">
+						<a href="qa.html">常見問題</a>
+					</li>
+					<li class="other-link">
+						<a href="terms.html">服務條款</a>
+						<a href="privacy.html">隱私權政策</a>
 					</li>
 				</ul>
-				<div class="link">
-					<p>
-						<a href="#" target="_block">使用條款</a>
-						<a href="#" target="_block">免責聲明</a>
-						<a href="#" target="_block">常見問題</a>
-					</p>
-				</div>
-			</section>
-		</footer>
+				<p class="text">Copyright © 2023 All Rights Reserved.</p>
+			</div>
+		
+		</nav>
+		<!-- Site Overlay -->
+		<div class="site-overlay"></div>
+		<div id="container">
+			<header class="header_wrap">
+				<button class="menu-btn">
+					<span></span>
+				</button>
+				<section class="cont_middle clearfix">
+					<a class="header_logo" href="index.html">WiFiOTG</a>
+					<nav class="menu">
+						<ul>
+							<li>
+								<p><a href="index.html">首頁</a></p>
+							</li>
+							<li>
+								<p><a href="location.html">取還點查詢</a></p>
+							</li>
+							<li>
+								<p><a href="teaching.html">使用說明</a></p>
+							</li>
+						</ul>
+					</nav>
+					<div class="cont_user">
+						<div class="profile">
+							<div class="photo"
+								style="background-image:url(https://lh3.googleusercontent.com/ogw/AGvuzYb52a2kJ6PRLTAuYe3-t0Hg2Dq7pfqEQ6iZ2oBu=s32-c-mo);">
+							</div>
+							<p class="user_name">wendyshiue00123</p>
+							<div class="sub_list">
+								<ul>
+									<li>
+										<p><a>帳號登出</a></p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
+			</header>
+			<main class="main_wrap">
+				<section class="shopping_contents">
+					<div class="order_fillin">
+						<h3 class="top_title">租借紀錄</h3>
+						<div class="order_history">
+							<!-- 租借中（展開） -->
+							<div class="card">
+								<div class="top_cont arr_up">
+									<!-- 租借中 state_online -->
+									<!-- 待取機 state_notyea -->
+									<!-- 已完成 state_done -->
+									<p class="state state_online">租借中</p>
+									<div class="order_nb_info">
+										<p class="order_date">訂單日期：2023-06-30</p>
+										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
+									</div>
+									<div class="arr"></div>
+								</div>
+								<div class="order_info">
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">方案</p>
+												<p class="text">流量儲值型NT$140/GB</p>
+											</li>
+											<li>
+												<p class="s_title">起迄日期</p>
+												<p class="text">2023-06-20 ~ 2023-06-27</p>
+											</li>
+											<li>
+												<p class="s_title">設備數</p>
+												<p class="text">1</p>
+											</li>
+											<li>
+												<p class="s_title">價格</p>
+												<p class="text">1,000</p>
+											</li>
+										</ul>
+									</div>
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">訂購人名稱</p>
+												<p class="text">Eikiy Chang</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人信箱</p>
+												<p class="text">
+													<a href="#">eikiychang@gmail.com</a>
+												</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人電話</p>
+												<p class="text">0988000123</p>
+											</li>
+										</ul>
+									</div>
+								</div>
+								<div class="device_info">
+									<p class="device_nb">裝置編號： <span>XXXXQEE</span></p>
+									<p class="btn"><a href="#">充值</a></p>
+								</div>
+							</div>
+							<!-- 租借中（收起） -->
+							<div class="card order_info">
+								<div class="top_cont">
+									<!-- 租借中 state_online -->
+									<!-- 待取機 state_notyea -->
+									<!-- 已完成 state_done -->
+									<p class="state state_online">租借中</p>
+									<div class="order_nb_info">
+										<p class="order_date">訂單日期：2023-06-30</p>
+										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
+									</div>
+									<div class="arr"></div>
+								</div>
+								<div class="order_info" style="display: none;">
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">方案</p>
+												<p class="text">流量儲值型NT$140/GB</p>
+											</li>
+											<li>
+												<p class="s_title">起迄日期</p>
+												<p class="text">2023-06-20 ~ 2023-06-27</p>
+											</li>
+											<li>
+												<p class="s_title">設備數</p>
+												<p class="text">1</p>
+											</li>
+											<li>
+												<p class="s_title">價格</p>
+												<p class="text">1,000</p>
+											</li>
+										</ul>
+									</div>
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">訂購人名稱</p>
+												<p class="text">Eikiy Chang</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人信箱</p>
+												<p class="text">
+													<a href="#">eikiychang@gmail.com</a>
+												</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人電話</p>
+												<p class="text">0988000123</p>
+											</li>
+										</ul>
+									</div>
+								</div>
+								<div class="device_info">
+									<p class="device_nb">裝置編號： <span>XXXXQEE</span></p>
+									<p class="btn"><a href="#">充值</a></p>
+								</div>
+							</div>
+							<!-- 待取機 -->
+							<div class="card">
+								<div class="top_cont">
+									<!-- 租借中 state_online -->
+									<!-- 待取機 state_not_yet -->
+									<!-- 已完成 state_done -->
+									<p class="state state_not_yet">待取機</p>
+									<div class="order_nb_info">
+										<p class="order_date">訂單日期：2023-07-05</p>
+										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
+									</div>
+									<div class="arr"></div>
+								</div>
+								<div class="order_info" style="display: none;">
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">方案</p>
+												<p class="text">流量儲值型NT$140/GB</p>
+											</li>
+											<li>
+												<p class="s_title">起迄日期</p>
+												<p class="text">2023-06-20 ~ 2023-07-05</p>
+											</li>
+											<li>
+												<p class="s_title">設備數</p>
+												<p class="text">1</p>
+											</li>
+											<li>
+												<p class="s_title">價格</p>
+												<p class="text">4,000</p>
+											</li>
+										</ul>
+									</div>
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">訂購人名稱</p>
+												<p class="text">Wendy Shiue</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人信箱</p>
+												<p class="text">
+													<a href="#">wendyshiue00123@gmail.com</a>
+												</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人電話</p>
+												<p class="text">0909123456</p>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<!-- 已完成（收起）- 標題底為灰色 -->
+							<div class="card bg_end">
+								<div class="top_cont">
+									<!-- 租借中 state_online -->
+									<!-- 待取機 state_not_yet -->
+									<!-- 已完成 state_done -->
+									<p class="state state_done">已完成</p>
+									<div class="order_nb_info">
+										<p class="order_date">訂單日期：2023-07-05</p>
+										<p class="order_nb">訂購編號：464QWQW4+8415843kaqw</p>
+									</div>
+									<div class="arr"></div>
+								</div>
+								<div class="order_info" style="display: none;">
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">方案</p>
+												<p class="text">流量儲值型NT$140/GB</p>
+											</li>
+											<li>
+												<p class="s_title">起迄日期</p>
+												<p class="text">2023-06-20 ~ 2023-07-05</p>
+											</li>
+											<li>
+												<p class="s_title">設備數</p>
+												<p class="text">1</p>
+											</li>
+											<li>
+												<p class="s_title">價格</p>
+												<p class="text">4,000</p>
+											</li>
+										</ul>
+									</div>
+									<div class="row">
+										<ul>
+											<li>
+												<p class="s_title">訂購人名稱</p>
+												<p class="text">Wendy Shiue</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人信箱</p>
+												<p class="text">
+													<a href="#">wendyshiue00123@gmail.com</a>
+												</p>
+											</li>
+											<li>
+												<p class="s_title">訂購人電話</p>
+												<p class="text">0909123456</p>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+			</main>
+			<footer class="footer_wrap">
+				<section class="cont_middle">
+					<div class="copyright">
+						<a class="logo">
+							<a href="index.html"></a>
+						</a>
+						<p>WiFi on the Go , Wherever You Go</p>
+						<p class="text-copyright">Copyright © 2023 All Rights Reserved.</p>
+					</div>
+					<ul class="service">
+						<li>
+							<p>客服信箱　<a href="mailto:">service@xxxxx.com</a></p>
+						</li>
+						<li>
+							<p>服務電話　<a href="tel:+886-2-1234-5678">02-1234-5678</a></p>
+						</li>
+						<li>
+							<p><span>（ 服務時間：週一至週日 9：00 ~ 18：00）</span></p>
+						</li>
+					</ul>
+					<div class="link">
+						<p>
+							<a href="#" target="_block">使用條款</a>
+							<a href="#" target="_block">免責聲明</a>
+							<a href="#" target="_block">常見問題</a>
+						</p>
+					</div>
+				</section>
+			</footer>
+		</div>
+		<!-- pushy JS -->
+		<script src="mobilemenu/pushy.js"></script>
+		<script>
+			// 按下同意後，呼叫setAllowPrivacy
+			function setAllowPrivacy() {
+				localStorage.setItem('isPrivacyAllowed', true);
+			}
+			// 載入頁面時，呼叫getAllowPrivacy，確認是否需要呈現隱私權
+			function getAllowPrivacy() {
+				var isPrivacyAllowed = localStorage.getItem('isPrivacyAllowed');
+				if (isPrivacyAllowed === 'true') {
+					// 不顯示隱私權
+					console.log('hide');
+					$('#cookie-accept').hide();
+				} else {
+					// 顯示隱私權
+					console.log('show');
+					$('#cookie-accept').show();
+				}
+			}
+			// 建立cookie
+			function createCookie(name, value, days, path) {
+				if (days) {
+					var date = new Date();
+					date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+					var expires = "; expires=" + date.toGMTString();
+				}
+				else var expires = "";
+				document.cookie = name + "=" + value + expires + "; path=/";
+			}
+
+			getAllowPrivacy();
+		</script>
 	</body>
 </html>
 
