--- a/iiot/WiFiOTG/order.html
+++ b/iiot/WiFiOTG/order.html
@@ -10,218 +10,312 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="css/style.css">
 		<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<!-- Pushy -->
+		<link rel="stylesheet" href="mobilemenu/pushy.css">
+		<script type="text/javascript">
+			// 點了top展開與箭頭轉向
+			$(function () {
+				$(".order_history .card .top_cont").click(function () {
+					$(this).next(".order_info").stop(true, true).fadeToggle(0);
+					$(this).toggleClass("arr_up");
+					return false;
+				});
+			});
+			$(function () {
+				$(".header_wrap .cont_user .profile").click(function () {
+					$(this).parent().find(".sub_list").stop(true, true).fadeToggle(0);
+					return false;
+				});
+			});
+		</script>
 	</head>
 	<body>
-		<header class="header_wrap">
-			<!-- 帳號登入 + logged_in -->
-			<section class="cont_middle logged_in clearfix">
-				<a class="header_logo" href="index.html">WiFiOTG</a>
-				<nav class="menu">
-					<ul>
-						<li>
-							<p><a href="index.html">首頁</a></p>
-						</li>
-						<li>
-							<p><a href="location.html">取還點查詢</a></p>
-						</li>
-						<li>
-							<p><a href="teaching.html">使用說明</a></p>
-						</li>
-						<li>
-							<p><a href="qa.html">常見問題</a></p>
-						</li>
-					</ul>
-				</nav>
-				<div class="cont_user">
-					<div class="profile">
-						<div class="photo" style="background-image:url(https://lh3.googleusercontent.com/ogw/AGvuzYb52a2kJ6PRLTAuYe3-t0Hg2Dq7pfqEQ6iZ2oBu=s32-c-mo);"></div>
-						<p>wendyshiue00123（<a href="#">登出</a>）</p>
-					</div>
-				</div>
-			</section>
-		</header>
-		<main class="main_wrap">
-			<section class="shopping_contents">
-				<form class="fillinBox">
-					<h3 class="top_title">訂購資訊</h3>
-					<div class="order_contents">
-						<div class="other_item">
-							<div class="img_wifi_router">
-								<img src="images/A1-Japan.jpg" alt="">
-							</div>
-							<h3>產品 Ti產產品 Titl產品 Title品 Titletle</h3>
-							<p>流量儲值型NT$140/GB</p>
-						</div>
-					</div>
-					<h4 class="order_subtitle">訂購說明</h4>
-					<ul>
-						<li class="clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">產品</p>
-								</label>
-							</div>
-							<div class="r_box">
-								<p class="pro_text">產品 Ti產產品 Titl產品 Title品 Titletle</p>
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">方案</p>
-								</label>
-							</div>
-							<div class="r_box">
-								<div class="styled-select">
-									<select class="md-input" name="">
-										<option disabled="" selected="" value="" selected="">請選擇</option>
-										<option value="1">流量儲值型NT$140/GB</option>
-										<option value="2">流量儲值型NT$360/GB</option>
-										<option value="3">流量儲值型NT$540/GB</option>
-									</select>
-								</div>
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">起迄日期</p>
-								</label>
-							</div>
-							<div class="r_box error_box clearfix">
-								<div class="both_input">
-									<input id="" name="" type="date" value="2023-07-23">
-									<span>~</span>
-									<input id="" name="" type="date" value="">
-								</div>
-								<p class="the_reminder">起、迄日期欄位為必填資訊</p>
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">租用天數</p>
-								</label>
-							</div>
-							<div class="r_box">
-								<p class="pro_text">7 天</p>
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">設備數</p>
-								</label>
-							</div>
-							<div class="r_box">
-								<p class="pro_text">1</p>
-							</div>
-						</li>
-						<li class="verify clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">優惠代碼</p>
-								</label>
-							</div>
-							<div class="r_box">
-								<input id="" name="" type="text" value="happyday">
-								<a class="btn_verify" href="#">驗證優惠碼</a>
-							</div>
-						</li>
-					</ul>
-
-					<h4 class="order_subtitle">訂購者聯絡資訊</h4>
-					<ul>
-						<li class="clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">姓名<span class="f_red">*</span></p>
-								</label>
-							</div>
-							<div class="r_box">
-								<input id="" name="" type="text" value="Eikiy">
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">手機號碼<span class="f_red">*</span></p>
-								</label>
-							</div>
-							<div class="r_box error_box for_phone">
-								<a class="btn_verify" href="#">簡訊驗證</a>
-								<input id="" name="" type="text" value="0988172456">
-								<p class="the_reminder">欄位為必填資訊</p>
-							</div>
-						</li>
-						<li class="clearfix">
-							<div class="l_box">
-								<label for="">
-								<p class="label_title">電子郵件<span class="f_red">*</span></p>
-							</label>
-							</div>
-							<div class="r_box">
-								<input id="" name="" type="text" value="abcd1111@service.com">
-							</div>							
-						</li>
-						<li class="total_amount clearfix">
-							<div class="l_box">
-								<label for="">
-									<p class="label_title">訂單金額</p>
-								</label>
-							</div>
-							<div class="r_box">
-								<p class="pro_text">$2,000</p>
-							</div>
-						</li>
-					</ul>
-					<div class="confirm clearfix">
-						<label for="" class="no_w">
-							<input class="the_radio" type="checkbox">
-							<p>我已詳閱並同意
-								<a href="#" target="_blank">服務條款</a>、
-								<a href="#" target="_blank">隱私權政策</a>。
-							</p>
-						</label>
-					</div>
-					<div class="bottom_btn">
-						<p class="cancel"><a href="#">取消</a></p>
-						<!-- 沒填好不給下一步 + btn_none -->
-						<p class="btn_default"><a class="btn_none">付款去</a></p>
-						<p class="btn_default"><a href="done.html">付款去</a></p>
-					</div>
-				</form>
-			</section>
-		</main>
-		<footer class="footer_wrap">
-			<section class="cont_middle">
-				<div class="copyright">
-					<a class="logo">
-						<a href="index.html"></a>
-					</a>
-					<p>WiFi on the Go , Wherever You Go</p>
-					<p class="text-copyright">Copyright © 2023 All Rights Reserved.</p>
-				</div>
-				<ul class="service">
-					<li>
-						<p>客服信箱　<a href="mailto:">service@xxxxx.com</a></p>
+		<!-- Pushy Menu -->
+		<nav class="pushy pushy-left" data-focus="#first-link">
+			<div class="pushy-content">
+				<!-- 有登入才顯示這行 hi_user  -->
+				<p class="hi_user">Hi, wendyshiue00123</p>
+				<ul>
+					<li class="pushy-link">
+						<a href="index.html">首頁</a>
 					</li>
-					<li>
-						<p>服務電話　<a href="tel:+886-2-1234-5678">02-1234-5678</a></p>
+					<li class="pushy-link">
+						<a class="c_yello" href="history.html">租借紀錄查詢</a>
 					</li>
-					<li>
-						<p><span>（ 服務時間：週一至週日 9：00 ~ 18：00）</span></p>
+					<li class="pushy-link">
+						<a href="location.html">取還點查詢</a>
+					</li>
+					<li class="pushy-link">
+						<a href="teaching.html">使用說明</a>
+					</li>
+					<li class="pushy-link">
+						<a href="qa.html">常見問題</a>
+					</li>
+					<li class="other-link">
+						<a href="terms.html">服務條款</a>
+						<a href="privacy.html">隱私權政策</a>
 					</li>
 				</ul>
-				<div class="link">
-					<p>
-						<a href="#" target="_block">使用條款</a>
-						<a href="#" target="_block">免責聲明</a>
-						<a href="#" target="_block">常見問題</a>
-					</p>
-				</div>
-			</section>
-		</footer>
+				<p class="text">Copyright © 2023 All Rights Reserved.</p>
+			</div>
+		
+		</nav>
+		<!-- Site Overlay -->
+		<div class="site-overlay"></div>
+		<div id="container">
+			<header class="header_wrap">
+				<button class="menu-btn">
+					<span></span>
+				</button>
+				<section class="cont_middle clearfix">
+					<a class="header_logo" href="index.html">WiFiOTG</a>
+					<nav class="menu">
+						<ul>
+							<li>
+								<p><a href="index.html">首頁</a></p>
+							</li>
+							<li>
+								<p><a href="location.html">取還點查詢</a></p>
+							</li>
+							<li>
+								<p><a href="teaching.html">使用說明</a></p>
+							</li>
+						</ul>
+					</nav>
+					<div class="cont_user">
+						<div class="profile">
+							<div class="photo"
+								style="background-image:url(https://lh3.googleusercontent.com/ogw/AGvuzYb52a2kJ6PRLTAuYe3-t0Hg2Dq7pfqEQ6iZ2oBu=s32-c-mo);">
+							</div>
+							<p class="user_name">wendyshiue00123</p>
+							<div class="sub_list">
+								<ul>
+									<li>
+										<p><a>帳號登出</a></p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
+			</header>
+			<main class="main_wrap">
+				<section class="shopping_contents">
+					<form class="fillinBox">
+						<h3 class="top_title">訂購資訊</h3>
+						<div class="order_contents">
+							<div class="other_item">
+								<div class="img_wifi_router">
+									<img src="images/A1-Japan.jpg" alt="">
+								</div>
+								<h3>產品 Ti產產品 Titl產品 Title品 Titletle</h3>
+								<p>流量儲值型NT$140/GB</p>
+							</div>
+						</div>
+						<h4 class="order_subtitle">訂購說明</h4>
+						<ul>
+							<li class="clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">方案</p>
+									</label>
+								</div>
+								<div class="r_box">
+									<div class="styled-select">
+										<select class="md-input" name="">
+											<option disabled="" selected="" value="" selected="">請選擇</option>
+											<option value="1">流量儲值型NT$140/GB</option>
+											<option value="2">流量儲值型NT$360/GB</option>
+											<option value="3">流量儲值型NT$540/GB</option>
+										</select>
+									</div>
+								</div>
+							</li>
+							<li class="clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">方案金額</p>
+									</label>
+								</div>
+								<div class="r_box">
+									<p class="pro_text">$2,000</p>
+								</div>
+							</li>
+							<li class="clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">起迄日期</p>
+									</label>
+								</div>
+								<div class="r_box error_box clearfix">
+									<div class="both_input">
+										<input id="" name="" type="date" value="2023-07-23">
+										<span>~</span>
+										<input id="" name="" type="date" value="">
+									</div>
+									<p class="the_reminder">起、迄日期欄位為必填資訊</p>
+								</div>
+							</li>
+							<li class="clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">租用天數</p>
+									</label>
+								</div>
+								<div class="r_box">
+									<p class="pro_text">7 天</p>
+								</div>
+							</li>
+							<li class="clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">設備數</p>
+									</label>
+								</div>
+								<div class="r_box">
+									<p class="pro_text">1</p>
+								</div>
+							</li>
+							<li class="verify clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">優惠代碼</p>
+									</label>
+								</div>
+								<div class="r_box">
+									<input id="" name="" type="text" value="happyday">
+									<a class="btn_verify" href="#">驗證優惠碼</a>
+									<p class="text f_red">成功折抵 $100</p>
+								</div>
+							</li>
+						</ul>
+
+						<h4 class="order_subtitle">訂購者聯絡資訊</h4>
+						<ul>
+							<li class="clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">姓名<span class="f_red">*</span></p>
+									</label>
+								</div>
+								<div class="r_box">
+									<input id="" name="" type="text" value="Eikiy">
+								</div>
+							</li>
+							<li class="clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">手機號碼<span class="f_red">*</span></p>
+									</label>
+								</div>
+								<div class="r_box error_box for_phone">
+									<a class="btn_verify" href="#">簡訊驗證</a>
+									<input id="" name="" type="text" value="0988172456">
+									<p class="the_reminder">欄位為必填資訊</p>
+								</div>
+							</li>
+							<li class="clearfix">
+								<div class="l_box">
+									<label for="">
+									<p class="label_title">電子郵件<span class="f_red">*</span></p>
+								</label>
+								</div>
+								<div class="r_box">
+									<input id="" name="" type="text" value="abcd1111@service.com">
+								</div>							
+							</li>
+							<li class="total_amount clearfix">
+								<div class="l_box">
+									<label for="">
+										<p class="label_title">訂單金額</p>
+									</label>
+								</div>
+								<div class="r_box">
+									<p class="pro_text">$1,900</p>
+								</div>
+							</li>
+						</ul>
+						<div class="confirm clearfix">
+							<label for="" class="no_w">
+								<input class="the_radio" type="checkbox">
+								<p>我已詳閱並同意
+									<a href="#" target="_blank">服務條款</a>、
+									<a href="#" target="_blank">隱私權政策</a>。
+								</p>
+							</label>
+						</div>
+						<div class="bottom_btn">
+							<p class="cancel"><a href="#">取消</a></p>
+							<!-- 沒填好不給下一步 + btn_none -->
+							<p class="btn_default"><a class="btn_none">付款去</a></p>
+							<p class="btn_default"><a href="done.html">付款去</a></p>
+						</div>
+					</form>
+				</section>
+			</main>
+			<footer class="footer_wrap">
+				<section class="cont_middle">
+					<div class="copyright">
+						<a class="logo">
+							<a href="index.html"></a>
+						</a>
+						<p>WiFi on the Go , Wherever You Go</p>
+						<p class="text-copyright">Copyright © 2023 All Rights Reserved.</p>
+					</div>
+					<ul class="service">
+						<li>
+							<p>客服信箱　<a href="mailto:">service@xxxxx.com</a></p>
+						</li>
+						<li>
+							<p>服務電話　<a href="tel:+886-2-1234-5678">02-1234-5678</a></p>
+						</li>
+						<li>
+							<p><span>（ 服務時間：週一至週日 9：00 ~ 18：00）</span></p>
+						</li>
+					</ul>
+					<div class="link">
+						<p>
+							<a href="#" target="_block">使用條款</a>
+							<a href="#" target="_block">免責聲明</a>
+							<a href="#" target="_block">常見問題</a>
+						</p>
+					</div>
+				</section>
+			</footer>
+		</div>
+		<!-- pushy JS -->
+		<script src="mobilemenu/pushy.js"></script>
+		<script>
+			// 按下同意後，呼叫setAllowPrivacy
+			function setAllowPrivacy() {
+				localStorage.setItem('isPrivacyAllowed', true);
+			}
+			// 載入頁面時，呼叫getAllowPrivacy，確認是否需要呈現隱私權
+			function getAllowPrivacy() {
+				var isPrivacyAllowed = localStorage.getItem('isPrivacyAllowed');
+				if (isPrivacyAllowed === 'true') {
+					// 不顯示隱私權
+					console.log('hide');
+					$('#cookie-accept').hide();
+				} else {
+					// 顯示隱私權
+					console.log('show');
+					$('#cookie-accept').show();
+				}
+			}
+			// 建立cookie
+			function createCookie(name, value, days, path) {
+				if (days) {
+					var date = new Date();
+					date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+					var expires = "; expires=" + date.toGMTString();
+				}
+				else var expires = "";
+				document.cookie = name + "=" + value + expires + "; path=/";
+			}
+
+			getAllowPrivacy();
+		</script>
 	</body>
 </html>
 
